--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.20"
   }
 }
