--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.20"
